--- a/style.css
+++ b/style.css
@@ -1,83 +1,86 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-div .header{
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-    font-size: 24px;
-    font-weight: bold;
+div .header {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: -90px;
+  font-size: 34px;
+  font-weight: bold;
 }
 
-.container{
-    width: 100%;
-    height: 100vh;
-    background: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.container {
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.calculator{
-    background: #3a4452;
-    padding: 20px;
-    border-radius: 10px;
+.calculator {
+  background: #3a4452;
+  padding: 20px;
+  border-radius: 10px;
 }
 
-.calculator form input{
-    border: 0;
-    outline: 0;
-    width: 60px;
-    height: 60px;
-    border-radius: 10px;
-    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.2);
-    background: transparent;
-    font-size: 20px;
-    color: white;
-    cursor: pointer;
-    margin: 10px;
-
+.calculator form input {
+  border: 0;
+  outline: 0;
+  width: 60px;
+  height: 60px;
+  border-radius: 10px;
+  box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1),
+    5px 5px 15px rgba(0, 0, 0, 0.2);
+  background: transparent;
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+  margin: 10px;
 }
 
-
-form .display{
-    display: flex;
-    justify-content: flex-end;
-    margin: 20px 0;
-
+form .display {
+  display: flex;
+  justify-content: flex-end;
+  margin: 20px 0;
 }
 
-form .display input{
-    text-align: right;
-    flex: 1;
-    font-size: 45px;
-    box-shadow: none; 
-    color: red;
-    border: 1px solid white;
+form .display input {
+  text-align: right;
+  flex: 1;
+  font-size: 45px;
+  box-shadow: none;
+  color: white;
+  border: 1px solid white;
+  padding: 4px;
 }
 
-form input.equal{
-    width: 145px;
+form input.equal {
+  width: 145px;
 }
 
-
-form input.operator{
-    color: #33ffd8;
+form input.operator {
+  color: #33ffd8;
 }
 
-.history-area{
-    margin-top: 10px;
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: center;
+.history-title {
+  display: flex;
+  justify-content: center;
 }
 
-.history-area .history{
-    width: 400px;
-    height: 100px;
-    border: 1px solid black;
-    border-radius: 10px;
+.history-area {
+  margin-top: -70px;
+  display: flex;
+  justify-content: center;
+}
+
+.history-area .history {
+  width: 350px;
+  padding: 14px;
+  border: 1px solid black;
+  border-radius: 7px;
 }
